--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body{
     background-color: black;
 }
 
-.start_button{
+.start-button{
     cursor: pointer;
     padding: 1.5rem 3rem;
     border: none;
@@ -14,7 +14,7 @@ body{
     background-image: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
 }
 
-.start_button:hover{
+.start-button:hover{
     background: white;
     color: #4dcc82;
 }
