--- a/index.css
+++ b/index.css
@@ -2,10 +2,38 @@ body{
     background-color: black;
 }
 
+hr{
+    border: 0.1rem solid #05441d;
+}
+
+h1,h2,h3,h4,h5,h6{
+    color: white;    
+    font: sans-serif;
+}
+
+p{
+    color: white;
+    font: sans-serif;
+}
+
+.home-top{
+    text-align: center;
+}
+
+.home-middle{
+    border: 0.2rem solid #05441d;
+    width: 30%;
+    text-align: center;
+    margin: 0 auto;
+    transform: translateY(100%); 
+}
+
 .start-button{
     cursor: pointer;
     padding: 1.5rem 3rem;
     border: none;
+    border-spacing: 10px;
+    position: relative;
     border-radius: 3rem;
     font: bold 10pt sans-serif;
     font-size: 1.5rem;
