refactor: add spacing between bottom border and button and place paragraph in another div

--- a/index.css
+++ b/index.css
@@ -26,6 +26,13 @@ p{
     text-align: center;
     margin: 0 auto;
     transform: translateY(100%); 
+    padding-bottom: 1rem;
+}
+
+
+.home-bottom{
+    text-align: center;
+    transform: translateY(700%); 
 }
 
 .start-button{
