feat: add basic radio button option for part one

--- a/part-one.css
+++ b/part-one.css
@@ -16,6 +16,11 @@ p{
     font: sans-serif;
 }
 
+label{
+    color: white;
+    font: sans-serif;
+}
+
 .home-top{
     text-align: center;
     padding-bottom: 15rem;
