--- a/part-one.css
+++ b/part-one.css
@@ -16,12 +16,49 @@ p{
     font: sans-serif;
 }
 
-label{
+ul li label{
     color: white;
     font: sans-serif;
+    cursor: pointer;
+}
+
+ul li:hover label{
+	color: #89ffca;
+}
+
+input[type=radio]:checked {
+    color: #0DFF92;
+}
+
+input[type=radio]:checked ~ label{
+    color: #0DFF92;
+}
+
+.submit-button{
+    cursor: pointer;
+    padding: 1.5rem 3rem;
+    border: none;
+    border-spacing: 10px;
+    position: relative;
+    border-radius: 3rem;
+    font: bold 10pt sans-serif;
+    font-size: 1.5rem;
+    color: white;
+    border-width: 1rem;
+    background-image: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
+}
+
+.submit-button:hover{
+    background: white;
+    color: #4dcc82;
 }
 
 .part-one-top{
+    text-align: center;
+    padding-bottom: 15rem;
+}
+
+.part-one-middle{
     text-align: center;
     padding-bottom: 15rem;
 }
