--- a/part-one.css
+++ b/part-one.css
@@ -52,6 +52,21 @@ input[type=radio]:checked ~ label{
     background-image: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
 }
 
+.next-button{
+    cursor: pointer;
+    padding: 1.5rem 3rem;
+    border: none;
+    border-spacing: 10px;
+    position: relative;
+    border-radius: 3rem;
+    font: bold 10pt sans-serif;
+    font-size: 1.5rem;
+    color: white;
+    border-width: 1rem;
+    background-image: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
+    visibility: hidden;
+}
+
 .submit-button:hover{
     background: white;
     color: #4dcc82;
@@ -64,5 +79,9 @@ input[type=radio]:checked ~ label{
 
 .part-one-middle{
     text-align: center;
-    padding-bottom: 15rem;
+    padding-bottom: 5rem;
+}
+
+.part-one-bottom{
+    text-align: center;
 }
