--- a/part-two.css
+++ b/part-two.css
@@ -16,16 +16,26 @@ p{
     font: sans-serif;
 }
 
-.part-one-top{
+.dial-pad {
+    display: block;
+    width: 60vh;
+    height: 60vh;
+    display: grid;
+    grid-template-rows: 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.5rem;
+  }
+
+.part-two-top{
     text-align: center;
     padding-bottom: 15rem;
 }
 
-.part-one-middle{
+.part-two-middle{
     text-align: center;
     padding-bottom: 5rem;
 }
 
-.part-one-bottom{
+.part-two-bottom{
     text-align: center;
 }
