--- a/part-two.css
+++ b/part-two.css
@@ -16,10 +16,14 @@ p{
     font: sans-serif;
 }
 
+#wrong-answer{
+    visibility: hidden;
+}
+
 .dial-pad {
     display: flex;
-    width: 50vh;
-    height: 50vh;
+    width: 45vh;
+    height: 45vh;
     display: grid;
     grid-template-rows: 1fr, 1fr, 1fr, 1fr;
     grid-template-columns: repeat(3, 1fr);
@@ -50,6 +54,25 @@ p{
 }
 
 .reset-button:hover{
+    background: aliceblue;
+    color: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
+}
+
+.submit-button{
+    cursor: pointer;
+    padding: 1.5rem 3rem;
+    border: none;
+    border-spacing: 10px;
+    position: relative;
+    border-radius: 3rem;
+    font: bold 10pt sans-serif;
+    font-size: 1.5rem;
+    color: white;
+    border-width: 1rem;
+    background-image: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
+}
+
+.submit-button:hover{
     background: aliceblue;
     color: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
 }
