--- a/part-three.css
+++ b/part-three.css
@@ -65,7 +65,7 @@ p{
     padding-bottom: 1rem;
 }
 
-.modal-container{
+.modal-button-container{
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -97,15 +97,29 @@ input{
     font-size:22px;
     padding: 0.5rem;
     background:none;
-    border:1px solid green;
+    border:1px solid darkgreen;
     color: aliceblue;
 }
 
 input:focus {
-    outline: none;
+    outline: 0;
+    border-color: lightgreen;
 }
 
 .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:  none;
+    display: grid;
+    place-items: center;
+    visibility: hidden;
+    z-index: -10;
+}
+
+.modal-overlay-2 {
     position: fixed;
     top: 0;
     left: 0;
@@ -116,7 +130,6 @@ input:focus {
     place-items: center;
     visibility: hidden;
     z-index: -10;
-    transition: all 0.3s linear
 }
 
 .modal-button-1{
@@ -195,4 +208,36 @@ input:focus {
     color: linear-gradient(315deg, #0d754a 0%, #05441d 74%);
 }
 
+.open-modal {
+    visibility: visible;
+    z-index: 10;
+}
 
+.close-button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    background: transparent;
+    border-color: transparent;
+    color: darkred;
+    cursor: pointer;
+  }
+
+.close-button:hover {
+    color: lightcoral;
+    transform: scale(1.3);
+}
+
+.modal-container {
+    background: darkolivegreen;
+    border: solid #05441d 0.4rem;
+    border-radius: 0.5rem;
+    width: 90vw;
+    height: 50vh;
+    max-width: 670px;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: relative;
+}
