--- a/resources/css/part-one.css
+++ b/resources/css/part-one.css
@@ -74,14 +74,31 @@ input[type=radio]:checked ~ label{
 
 .part-one-top{
     text-align: center;
-    padding-bottom: 15rem;
+    padding-bottom: 5rem;
 }
 
 .part-one-middle{
     text-align: center;
-    padding-bottom: 5rem;
+    padding-bottom: 1rem;
 }
 
 .part-one-bottom{
     text-align: center;
+}
+
+.item [type="radio"] {
+    display: none;
+}
+
+ .item label {
+    display: block;
+    padding: 2rem 3rem;
+    background: #1717ad;
+    border: 0.5rem solid rgba(255, 255, 255, 0.1);
+    border-radius: 1rem;
+    cursor: pointer;
+    font-size: 18px;
+    transition: 0.4s ease-in-out 0s;
+    width: 20rem;
+    margin: auto auto 1rem auto;
 }
