--- a/resources/css/part-four.css
+++ b/resources/css/part-four.css
@@ -19,6 +19,7 @@ p{
 .lock-dial{
 	height: 10rem;
 	width: 10rem;
+	margin-left: 1rem;
 	background: linear-gradient(top, #8c9093 0%,#b6babd 9%,#ccd2d6 18%,#ffffff 55%,#ccd2d6 82%,#b6babd 91%,#8c9093 100%);
 	background: linear-gradient(to bottom, #8c9093 0%,#b6babd 9%,#ccd2d6 18%,#ffffff 55%,#ccd2d6 82%,#b6babd 91%,#8c9093 100%);
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
